correcion de backend,models y loginUP.html

--- a/user/templates/loginUP.html
+++ b/user/templates/loginUP.html
@@ -29,14 +29,13 @@
     <script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
 </head>
 <body class="hold-transition login-page">
-    {% comment %} optimizar codigo se hizo rapido para entregar rapido att juan david {% endcomment %}
     <div class="login-box">
         <div class="login-logo">
             <a href="#"><img src="{% static 'img/layoutset.png' %}" alt="" width="320"></a>
         </div>
         <div class="card">
             <div class="card-body login-card-body">
-                <p class="login-box-msg">Portal de instalaciones de EMCALI</p>
+                <p class="login-box-msg">Portal de NADA por ahora</p>
 
                 <!----------- INICIO DE FORMULARIO ------------>
                 <form action="." method="post">
