se organiza los estilos y los templates

--- a/user/templates/loginUP.html
+++ b/user/templates/loginUP.html
@@ -27,6 +27,8 @@
     <!-- Jquery Confirm -->
     <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}">
     <script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
+     <!-- Agregar el archivo CSS -->
+     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
